updated CSS2 Assignment

--- a/CSS2/index.html
+++ b/CSS2/index.html
@@ -25,8 +25,9 @@
                 <li><a href="http://">Publications</a></li>
                 <li><a href="http://">Feedback</a></li>
                 <li class="franchise"><a href="">Get a Franchise</a></li>
-                <li class="order"><a href="">Order Online <span class="arrow">
-                            <i class="fa-solid fa-arrow-right"></i></span></a></li>
+                <li class="order"><a href="">Order Online 
+                    <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span></a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -275,18 +276,66 @@
             <h1 class="logo-text">Salt'n Pepper</h1>
             <h1>Express Franchises (Opening Soon)</h1>
         </div>
+        <div class="ep-main">
+            <div class="ep-div">
+                <img src="images/location-logo.webp" alt="">
+                <p class="red-color">OPENING SOON</p>
+                <p><strong>Salt'n Pepper</strong> Express</p>
+                <p>Al-Jalil Garden</p>
+                <p>Sadhoke</p>            
+            </div>
+            <div class="ep-div">
+                <img src="images/location-logo.webp" alt="">
+                <p class="red-color">OPENING SOON</p>
+                <p><strong>Salt'n Pepper</strong> Express</p>
+                <p>Al-Jalil Garden</p>
+                <p>Sheikhupura</p>
+            </div>
+            <div class="ep-div">
+                <img src="images/location-logo.webp" alt="">
+                <p class="red-color">OPENING SOON</p>
+                <p><strong>Salt'n Pepper</strong> Express</p>
+                <p>Blue World City</p>
+                <p>Rawalpindi</p>
+            </div>
+        </div>
+        <div class="ep-main two-div">
+            <div class="ep-div">
+                <img src="images/location-logo.webp" alt="">
+                <p class="red-color">OPENING SOON</p>
+                <p><strong>Salt'n Pepper</strong> Express</p>
+                <p>Gujrat</p>
+            </div>
+            <div class="ep-div">
+                <img src="images/location-logo.webp" alt="">
+                <p class="red-color">OPENING SOON</p>
+                <p><strong>Salt'n Pepper</strong> Express</p>
+                <p>Citi Housing Society</p>
+                <p>Jehlum</p>
+            </div>
+        </div>
+        <div class="franchise-text social">
+            <h2>Social Feed</h2>
+            <div class="social-feed">
+                <img src="images/socialfeed1.webp" alt="" width="230px" height="230px">
+                <img src="images/socialfeed2.webp" alt="" width="230px" height="230px">
+                <img src="images/socialfeed3.webp" alt="" width="230px" height="230px">
+                <img src="images/socialfeed4.webp" alt="" width="230px" height="230px">
+                <img src="images/socialfeed5.webp" alt="" width="230px" height="230px">
+            </div>
+        </div>
     </section>
     <!-- Express Franchises Section Ends Here -->
 
     <!-- footer Section -->
     <footer>
-        <div>
+        <div class="footer-link main-ft">
             <img src="images/logo.webp" alt="logo" height="60px"><br>
             <p>The Salt’n Pepper Restaurants are an example of gracious dinning, outstanding service, extraordinary
                 classic and contemporary cuisine. The restaurants have become the ultimate dinning destinations in
                 Lahore. From family occasions to business dinner and moments of the heart, this place is where
                 unforgettable memories are made.</p>
-            <p><a href="">Term & Conditions </a><a href="">Privacy Policy</a></p>
+            <p><a href="">Term & Conditions Privacy Policy</a></p>
         </div>
         <div>
             <div class="footer-link">
@@ -305,22 +354,29 @@
                 <a href="http://">+92 42 358 509 31</a>
                 <a href="http://">+92 42 358 509 31</a>
                 <a href="">+92 42 358 509 31</a>
-                <a href="">+92 42 358 509 31</a>
+                <a href="">snpfood@brain.net.pk-</a>
+                <address>23-Usman Block, New <br> GardenTown, Lahore,<br> Pakistan</address>
             </div>
         </div>
         <div>
             <div class="footer-link">
                 <h6>Follow Us</h6>
-                <span><i class="fa-brands fa-facebook-f"></i></span>
-                <span><i class="fa-brands fa-instagram"></i></span>
-                <span><i class="fa-brands fa-twitter"></i></span>
+                <p class="social-icon">
+                <a><i class="fa-brands fa-facebook-f iicon"></i></a>
+                <a><i class="fa-brands fa-instagram iicon"></i></a>
+                <a><i class="fa-brands fa-twitter iicon"></i></a>
+                </p>
                 <a href=""><img src="images/appstore.webp" alt=""></a>
                 <a href=""><img src="images/googlestore.webp" alt=""></a>
             </div>
         </div>
-        <hr>
-
     </footer>
+    <div class="powered-by-main">
+    <div class="powered-by">
+        <span>&copy; 2023 Salt’n Pepper Restaurant.</span>
+        <span>Made by optimisticysasir@outlook.com</span>
+    </div>
+</div>
     <!-- footer Section Ends Here -->
 </body>
 
