--- a/CSS3/Pepsi clone/index.html
+++ b/CSS3/Pepsi clone/index.html
@@ -1,18 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link href="https://db.onlinewebfonts.com/c/7d89fd5a3b1077fea23b1658f1f8d320?family=Fidel-Black" rel="stylesheet">
-    <title>Pepsi</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link href="https://db.onlinewebfonts.com/c/7d89fd5a3b1077fea23b1658f1f8d320?family=Fidel-Black" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Pepsi</title>
 </head>
+
 <body>
-    
+  <!-- Navbar Section Starts Here -->
+  <nav class="navbar navbar-expand-lg navbar-light nav-sec">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-text">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              VIEW PRODUCTS
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">WHAT'S NEW</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">NEWSLETTER</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CONTACT US</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <button class="btn btn-outline-success buy-btn" type="submit">BUY PEPSI PRODUCTS</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar Section Ends Here -->
+  <section class="hero">
+    <div class="hero-img">
+      <div class="hero-img1"></div>
+      <div class="hero-img2">
+        <div class="hero-text">
+          <button class="btn btn-outline-success buy-btn" type="submit">GET IT NOW!</button>
+          <p>Ends 09/17/23. Age restrictions apply, US/DC/Guam/PR. Limit 1 per person. New &amp; qualified returning
+            subscribers only. $10.99/month after trial until cancelled. Rules &amp; Terms at </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- HERO 2 SECTION STARTS HERE -->
+  <section class="hero2">
+    <div class="hero2-img">
+      <div class="hero2-img1"><img src="images/new-improved-taste.svg" width="180px" alt=""></div>
+      <div class="hero2-img2">
+        <img src="images/headline.svg" width="500px" alt="">
+        <img src="images/try-it-to-believe-it.svg" width="400px" alt="">
+      </div>
+    </div>
+  </section>
+  <!-- HERO 2 SECTION ENDS HERE -->
+  <section class="hero3">
+    <div class="hero-img">
+      <div class=""><img src="images/Pepsi_CAN_Glass@2x.png" width="370px" height="500px" alt=""></div>
+
+      <div>
+        <img src="images/Nitro_Logo@3x.png" width="350px" alt="">
+        <div class="hero3-text">
+          <h3>SMOOTH,CREAMY,DELICIOUS</h3>
+          <button class="btn btn-outline-success buy-btn" type="submit">LEARN MORE</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <div class="prom-video">
+      <video controls="" controlslist="nodownload noremoteplayback" class="hero__video" kind="captions" type="video/mp4" src="https://www.pepsi.com/en-us/uploads/media/PepsiWildCherry.Copier.15.mp4" poster="https://www.pepsi.com/en-us/uploads/media/Cherry-Copier.png" autoplay="true" loop="true" playsinline="true" muted="true"></video>
+    </div>
+
+    <!-- PROMOTION SECTION STARTS HERE -->
+    <section class="promotion-sec">
+      <div class="prom-main">
+        <div><img src="images/twil-can.png" width="750px" alt=""></div>
+        <div><img src="images/twil-header-dt.png" width="430px" alt=""></div>
+      </div>
+    </section>
+
+    <!-- PROMOTION SECTION ENDS HERE -->
+
+    <!-- Favorite Section Starts here -->
+    <section class="fvrt">
+      <div class="fvrt-main">
+        <div class="fvrt-text">
+          <h1>ALL YOUR <br>
+            FAVORITE FLAVORS. <br>
+            ALL RIGHT HERE.</h1>
+            <p>Pepsi. Diet Pepsi. Pepsi Zero Sugar. The gang’s all here. Compare flavors, get nutritional facts and check out ingredients for all our Pepsi products.</p>
+            <button class="btn btn-outline-success buy-btn" type="submit">VIEW PRODUCTS</button>
+          </div>
+        <div><img src="images/promotion1-hero_v3.png" width="500px" alt=""></div>
+      </div>
+    </section>
+    <!-- Favorite Section Ends here -->
+  <!-- Social Section Starts here -->
+    <section class="s-feed">
+      <h1>STAY ON THE PULSE. FOLLOW PEPSI.<h1>
+      <div class="soc-feed">
+        <div>
+          <img src="images/social-twitter.png" alt="" width="230px">
+        </div>
+        <div>
+          <img src="images/social-facebook.png" alt="" width="230px">
+        </div>
+        <div>
+          <img src="images/social-instagram.png" alt="" width="230px">
+        </div>
+        <div>
+          <img src="images/social-youtube.png" alt="" width="230px">
+        </div>
+        <div>
+          <img src="images/social-tiktok.png" alt="" width="230px">
+        </div>
+      </div>
+    </section>
+  <!-- Social Section Ends here -->
+  <!-- Footer Section Starts Here -->
+  <footer>
+    <div class="footer-main">
+      <div><img src="images/logo-large.png" alt=""></div>
+      <div>
+        <p><a href="">CONTACT US</a> <br>
+          <a href="">TERMS & CONDITIONS</a> <br>
+          <a href="">PRIVACY POLICY</a>
+        </p>
+      </div>
+      <div>
+        <p><a href="">COPYRIGHT</a> <br>
+          <a href="">PRODUCT FACTS</a> <br>
+          <a href="">STORE LOCATOR</a>
+        </p>
+      </div>
+      <div>
+        <p><a href="">SERVE PEPSI</a> <br>
+          <a href="">ABOUT OUR ADS</a> <br>
+          <a href="">CAREERS</a>
+        </p>
+      </div>
+      <div>
+        <button class="btn btn-outline-success buy-btn" type="submit">SUBSCRIBE TO NEWSLETTER</button>
+        <p class="icons-btn">
+          <i class="bi bi-twitter"></i>
+          <i class="bi bi-instagram"></i>
+          <i class="bi bi-youtube"></i>
+          <i class="bi bi-facebook"></i>
+          <i class="bi bi-tiktok"></i>
+        </p>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
