completed but not responsive

--- a/CSS3/Pepsi clone/index.html
+++ b/CSS3/Pepsi clone/index.html
@@ -76,11 +76,24 @@
       <div class="hero2-img1"><img src="images/new-improved-taste.svg" width="180px" alt=""></div>
       <div class="hero2-img2">
         <img src="images/headline.svg" width="500px" alt="">
-        <img src="images/try-it-to-believe-it.svg" width="400px" alt="">
+        <img src="images/try-it-to-believe-it.svg" class="fig-cap" width="350px" alt="">
+        <div class="fig-img">
+          <figure >
+            <img src="images/gagt_steve.png" width="250px" height="110px" alt="">
+            <figcaption>STEVE MARTIN GREAT ACTING OR GREAT TASTE</figcaption>
+          </figure>
+          <figure>
+            <img src="images/gagt_ben.png" width="250px" alt="">
+            <figcaption>BEN STILLER GREAT ACTING OR GREAT TASTE</figcaption>
+          </figure>
+        </div>
       </div>
     </div>
   </section>
   <!-- HERO 2 SECTION ENDS HERE -->
+
+  <!-- HERO 3 SECTION ENDS HERE -->
+
   <section class="hero3">
     <div class="hero-img">
       <div class=""><img src="images/Pepsi_CAN_Glass@2x.png" width="370px" height="500px" alt=""></div>
@@ -94,56 +107,97 @@
       </div>
     </div>
   </section>
+  <!-- HERO 3 SECTION ENDS HERE -->
 
-    <div class="prom-video">
-      <video controls="" controlslist="nodownload noremoteplayback" class="hero__video" kind="captions" type="video/mp4" src="https://www.pepsi.com/en-us/uploads/media/PepsiWildCherry.Copier.15.mp4" poster="https://www.pepsi.com/en-us/uploads/media/Cherry-Copier.png" autoplay="true" loop="true" playsinline="true" muted="true"></video>
+  <!-- Better with Pepsi Section -->
+  <section class="better-sec">
+    <div class="better">
+      <div>
+        <img src="images/Thumbnail_2.jpg" alt="" width="380px">
+        <p>BETTER WITH PEPSI | RIBS</p>
+      </div>
+      <div><img src="images/Thumbnail.jpg" alt="" width="380px">
+        <p>BETTER WITH PEPSI | NACHOS</p>
+      </div>
     </div>
+    <div class="tag-img">
+      <img src="images/tag-line@3x.png" alt="" width="480px">
+    </div>
+  </section>
+  <!-- Better with Ends Section -->
 
-    <!-- PROMOTION SECTION STARTS HERE -->
-    <section class="promotion-sec">
-      <div class="prom-main">
-        <div><img src="images/twil-can.png" width="750px" alt=""></div>
-        <div><img src="images/twil-header-dt.png" width="430px" alt=""></div>
+  <!-- HERO 4 SECTION STARTS HERE -->
+  <section class="hero4">
+    <div class="hero4-main">
+      <div class="hero4-img">
+        <div class="hero4-img1"><img src="images/headline@3x.png" width="380px" alt=""></div>
+        <div class="hero4-img2">
+          <img src="images/bg-2-desktop@2x.png" alt="">
+        </div>
       </div>
-    </section>
-
-    <!-- PROMOTION SECTION ENDS HERE -->
-
-    <!-- Favorite Section Starts here -->
-    <section class="fvrt">
-      <div class="fvrt-main">
-        <div class="fvrt-text">
-          <h1>ALL YOUR <br>
-            FAVORITE FLAVORS. <br>
-            ALL RIGHT HERE.</h1>
-            <p>Pepsi. Diet Pepsi. Pepsi Zero Sugar. The gang’s all here. Compare flavors, get nutritional facts and check out ingredients for all our Pepsi products.</p>
-            <button class="btn btn-outline-success buy-btn" type="submit">VIEW PRODUCTS</button>
-          </div>
-        <div><img src="images/promotion1-hero_v3.png" width="500px" alt=""></div>
+      <div class="hero4-sec2">
+        <img src="images/bg-1-desktop@2x.png" width="860px">
+        <img src="images/twill@2x.png" class="img2-twil" width="380px" alt="">
       </div>
-    </section>
-    <!-- Favorite Section Ends here -->
+    </div>
+  </section>
+  <!-- HERO 4 SECTION ENDS HERE -->
+
+  <!-- VIDEO SECTION STARTS HERE -->
+  <div class="prom-video">
+    <video controls="" controlslist="nodownload noremoteplayback" class="hero__video" kind="captions" type="video/mp4"
+      src="https://www.pepsi.com/en-us/uploads/media/PepsiWildCherry.Copier.15.mp4"
+      poster="https://www.pepsi.com/en-us/uploads/media/Cherry-Copier.png" autoplay="true" loop="true"
+      playsinline="true" muted="true"></video>
+  </div>
+  <!-- VIDEO SECTION ENDS HERE -->
+
+  <!-- PROMOTION SECTION STARTS HERE -->
+  <section class="promotion-sec">
+    <div class="prom-main">
+      <div><img src="images/twil-can.png" width="750px" alt=""></div>
+      <div><img src="images/twil-header-dt.png" width="430px" alt=""></div>
+    </div>
+  </section>
+
+  <!-- PROMOTION SECTION ENDS HERE -->
+
+  <!-- Favorite Section Starts here -->
+  <section class="fvrt">
+    <div class="fvrt-main">
+      <div class="fvrt-text">
+        <h1>ALL YOUR <br>
+          FAVORITE FLAVORS. <br>
+          ALL RIGHT HERE.</h1>
+        <p>Pepsi. Diet Pepsi. Pepsi Zero Sugar. The gang’s all here. Compare flavors, get nutritional facts and check
+          out ingredients for all our Pepsi products.</p>
+        <button class="btn btn-outline-success buy-btn" type="submit">VIEW PRODUCTS</button>
+      </div>
+      <div><img src="images/promotion1-hero_v3.png" width="500px" alt=""></div>
+    </div>
+  </section>
+  <!-- Favorite Section Ends here -->
   <!-- Social Section Starts here -->
-    <section class="s-feed">
-      <h1>STAY ON THE PULSE. FOLLOW PEPSI.<h1>
-      <div class="soc-feed">
-        <div>
-          <img src="images/social-twitter.png" alt="" width="230px">
+  <section class="s-feed">
+    <h1>STAY ON THE PULSE. FOLLOW PEPSI.<h1>
+        <div class="soc-feed">
+          <div>
+            <img src="images/social-twitter.png" alt="" width="230px">
+          </div>
+          <div>
+            <img src="images/social-facebook.png" alt="" width="230px">
+          </div>
+          <div>
+            <img src="images/social-instagram.png" alt="" width="230px">
+          </div>
+          <div>
+            <img src="images/social-youtube.png" alt="" width="230px">
+          </div>
+          <div>
+            <img src="images/social-tiktok.png" alt="" width="230px">
+          </div>
         </div>
-        <div>
-          <img src="images/social-facebook.png" alt="" width="230px">
-        </div>
-        <div>
-          <img src="images/social-instagram.png" alt="" width="230px">
-        </div>
-        <div>
-          <img src="images/social-youtube.png" alt="" width="230px">
-        </div>
-        <div>
-          <img src="images/social-tiktok.png" alt="" width="230px">
-        </div>
-      </div>
-    </section>
+  </section>
   <!-- Social Section Ends here -->
   <!-- Footer Section Starts Here -->
   <footer>
