Update some styles

--- a/CSS3/Pepsi clone/index.html
+++ b/CSS3/Pepsi clone/index.html
@@ -202,7 +202,7 @@
   <!-- Footer Section Starts Here -->
   <footer>
     <div class="footer-main">
-      <div><img src="images/logo-large.png" alt=""></div>
+      <div><img src="images/logo-large.png" alt="" class="footer-img"></div>
       <div>
         <p><a href="">CONTACT US</a> <br>
           <a href="">TERMS & CONDITIONS</a> <br>
@@ -221,7 +221,8 @@
           <a href="">CAREERS</a>
         </p>
       </div>
-      <div>
+      <!-- <hr> -->
+      <div class="footer-btn">
         <button class="btn btn-outline-success buy-btn" type="submit">SUBSCRIBE TO NEWSLETTER</button>
         <p class="icons-btn">
           <i class="bi bi-twitter"></i>
