completed CSS 4 Assignment

--- a/CSS4-Assignment/index.html
+++ b/CSS4-Assignment/index.html
@@ -11,13 +11,13 @@
     <!-- Navbar Section Starts here -->
     <section class="navbar">
         <div class="nav-main">
-            <div class="nav-logo"><img src="images/logo.png" width="100px" alt=""></div>
+            <div class="nav-logo"><a href="#"><img src="images/logo.png" width="100px" alt=""></a></div>
             <div class="nav-item-main">
                 <ul class="nav-item">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">How tere works</a></li>
-                    <li><a href="">Tere benefits</a></li>
-                    <li><a href="" class="help-btn">Help Center</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">How tere works</a></li>
+                    <li><a href="#">Tere benefits</a></li>
+                    <li><a href="#" class="help-btn">Help Center</a></li>
                 </ul>
             </div>
         </div>
@@ -32,19 +32,124 @@
                     SAVE MONEY, MAKE <br>
                     FRIENDS!
                 </h1>
-                <p>Its simple and its free. Play your part in reducing Carbon Footprint and help Mother Nature to sustain its beauty. So what are you waiting for ?  
+                <p class="sim-text">Its simple and its free. Play your part in reducing <br>
+                     Carbon Footprint and help Mother Nature to <br> sustain its beauty. So what are you waiting for ?<br>  
                     Lets ride together
                 </p>
                 <p class="store-icon">
-                    <img src="images/playstore-icon.png" alt="" width="200px">
-                    <img src="images/app-store-icon.png" alt="" width="200px">
+                    <a href="#"><img src="images/playstore-icon.png" alt="" width="200px"></a>
+                    <a href="#"><img src="images/app-store-icon.png" alt="" width="200px"></a>
                 </p>
             </div>
             <div class="hero-img">
-                <img src="images/car-map-.png" alt="pix" width="600px" height="400px" > 
+                <img src="images/car-map-.png" alt="pix" width="550px" height="500px" > 
             </div>
         </div>
     </section>
+    <div class="apply">
+        <div class="apply-main">
+            <div>
+                <p class="apply-text">
+                    Let's go. Get a link <br>to download the app.
+                </p>
+            </div>
+            <div class="input-div">
+                <input type="number" placeholder="Enter Mobile phone number" name="mob-num" id="mob-num">
+                <input type="button" value="APPLY TO DRIVE" class="apply-btn">
+            </div>
+        </div>
+    </div>
     <!-- Hero Section Ends Here -->
+    <section class="how-works">
+        <div class="work-main">
+            <div>
+                <h1 class="heading">HOW <span class="tere-color">TERE</span> WORKS</h1>
+                <p class="para">Download and install the tere app. Enter your phone <br> number and make your user account. when approved you <br>may start driving.</p>
+            </div>
+            <div class="work-main2">
+                <div class="sd1">
+                    <div>
+                        <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">1</span></p>
+                        <h3>REQUEST A RIDE</h3>
+                        <p>Have to reach office or going for shopping ? 
+                        Just put your current location and destination and search a ride that suits you</p>
+                    </div>
+                    <div>
+                        <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">3</span></p>
+                        <h3>INSTANT NOTIFICATIONS</h3>
+                        <p>Get instant notifications for your rides and be in contact with fellow riders all the time</p>
+                    </div>
+                </div>
+                <div class="sd2"><img src="images/mobile-pic.png" alt=""></div>
+                <div class="sd1 sd3">
+                    <div>
+                        <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">2</span></p>
+                        <h3>POST A RIDE</h3>
+                        <p>Going somewhere but hate to travel alone - 
+                            just post your ride details and publish it</p>
+                    </div>
+                    <div>
+                        <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">4</span></p>
+                        <h3>CASHLESS PAYMENT</h3>
+                        <p>Payment made easy by using your own Wallet - no more cash to carry</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- TERE HERO SECTION ENDS HERE -->
+
+
+    <!-- TERE BENIFITS SECTION STARTS HERE -->
+    <section class="tere-benefit">
+        <h1 class="heading"><span class="tere-color">TERE</span> BENEFITS</h1>
+        <div class="benefits">
+            <div class="benefit-sm">
+                <h1><span class="tere-num">01.</span> <span class="num-head">Flexible <br> Working hours</span></h1>
+                <p class="para">You can decide when, and how much time you want to drive</p>
+            </div>
+            <div>
+                <img src="images/Group.png" alt="">
+            </div>
+        </div>
+        <div class="benefits">
+            <div>
+                <img src="images/Frame(1).png" alt="">
+            </div>
+            <div class="benefit-sm">
+                <h1><span class="tere-num">02.</span> <span class="num-head">Earnings</span></h1>
+                <p class="para">By driving with tere you can earn more.</p>
+            </div>
+        </div>
+        <div class="benefits">
+            <div class="benefit-sm">
+                <h1><span class="tere-num">03.</span> <span class="num-head">Customer <br>support 24/7</span></h1>
+                <p class="para">Tere is a local service provider and we are proud to support you in your local language. We are proud to be at your service 24/7!</p>
+            </div>
+            <div>
+                <img src="images/Frame.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- TERE BENIFITS SECTION ENDS HERE -->
+    <!-- FOOTER SECTION STARTS HERE -->
+    <section class="foter">
+        <footer>
+            <ul class="footer-div">
+                <li><img src="images/Group 3703.png" alt=""></li>
+                <li><img src="images/menu.png" alt=""></li>
+                <li><img src="images/menu.png" alt=""></li>
+                <li><p>
+                    <img src="images/playstore-icon.png" width="150px" alt="">
+                    <img src="images/app-store-icon.png" alt="" width="150px">
+                </p></li>
+            </ul>
+        </footer>
+    </section>
+    <!-- FOOTER SECTION ENDS HERE -->
+    <div class="develop">
+        <hr>
+        <h4>Developed by optimisticyasir@outlook.com</h4>
+    </div>
 </body>
 </html>
