made responsiveness in CSS4 Assignment

--- a/CSS5/index.html
+++ b/CSS5/index.html
@@ -13,18 +13,23 @@
 <body>
     <section class="navbar">
       <div class="nav-main">
-        <div>Portfolio</div>
-        <div>
-          <i class="bi bi-facebook"></i>
+        <div class="logo"><img src="https://toppng.com/uploads/preview/mountain-png-transparent-free-images-clip-art-mountain-logo-11562903198rqfbyusjl7.png" width="50px" alt="">Portfolio</div>
+        <div class="nav-icon">
+          <a href="#"><i class="bi bi-facebook"></i></a>
           <i class="bi bi-twitter"></i>
           <i class="bi bi-linkedin"></i>
           <i class="bi bi-instagram"></i>
           <i class="bi bi-whatsapp"></i>
         </div>
-      </div>
         <div>
           <i class="bi bi-list"></i>
         </div>
+      </div>
+    </section>
+    <section class="hero">
+      <div class="hero-main">
+
+      </div>
     </section>
 </body>
 </html>
