--- a/CSS4-Assignment/index.html
+++ b/CSS4-Assignment/index.html
@@ -76,19 +76,30 @@
                         <p>Have to reach office or going for shopping ? 
                         Just put your current location and destination and search a ride that suits you</p>
                     </div>
-                    <div>
+                    <div class="grp-hid">
                         <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">3</span></p>
                         <h3>INSTANT NOTIFICATIONS</h3>
                         <p>Get instant notifications for your rides and be in contact with fellow riders all the time</p>
                     </div>
+                    <div class="work-hid">
+                        <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">2</span></p>
+                    <h3>POST A RIDE</h3>
+                    <p>Going somewhere but hate to travel alone - 
+                        just post your ride details and publish it</p>
+                    </div>
                 </div>
                 <div class="sd2"><img src="images/mobile-pic.png" alt=""></div>
                 <div class="sd1 sd3">
-                    <div>
+                    <div class="grp-hid">
                         <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">2</span></p>
                         <h3>POST A RIDE</h3>
                         <p>Going somewhere but hate to travel alone - 
                             just post your ride details and publish it</p>
+                    </div>
+                    <div class="work-hid">
+                        <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">3</span></p>
+                        <h3>INSTANT NOTIFICATIONS</h3>
+                        <p>Get instant notifications for your rides and be in contact with fellow riders all the time</p>
                     </div>
                     <div>
                         <p class="work-grp"><img src="images/Group 3706.png" alt=""><span class="work-num">4</span></p>
@@ -114,11 +125,11 @@
                 <img src="images/Group.png" alt="">
             </div>
         </div>
-        <div class="benefits">
+        <div class="benefits benefit-middle">
             <div>
                 <img src="images/Frame(1).png" alt="">
             </div>
-            <div class="benefit-sm">
+            <div class="benefit-sm ben-middle">
                 <h1><span class="tere-num">02.</span> <span class="num-head">Earnings</span></h1>
                 <p class="para">By driving with tere you can earn more.</p>
             </div>
@@ -129,7 +140,7 @@
                 <p class="para">Tere is a local service provider and we are proud to support you in your local language. We are proud to be at your service 24/7!</p>
             </div>
             <div>
-                <img src="images/Frame.png" alt="">
+                <img src="images/Frame.png" alt="" width="250px">
             </div>
         </div>
     </section>
@@ -138,10 +149,15 @@
     <section class="foter">
         <footer>
             <ul class="footer-div">
-                <li><img src="images/Group 3703.png" alt=""></li>
+                <li><img src="images/Group 3703.png" alt="" class="fot-logo">
+                    <p class="store-show">
+                        <img src="images/playstore-icon.png" width="150px" alt="">
+                        <img src="images/app-store-icon.png" alt="" width="150px">
+                    </p>
+                </li>
                 <li><img src="images/menu.png" alt=""></li>
                 <li><img src="images/menu.png" alt=""></li>
-                <li><p>
+                <li><p class="store-pix">
                     <img src="images/playstore-icon.png" width="150px" alt="">
                     <img src="images/app-store-icon.png" alt="" width="150px">
                 </p></li>
