updated CSS3 and made responsive

--- a/CSS3/Grumpy Bear/index.html
+++ b/CSS3/Grumpy Bear/index.html
@@ -63,9 +63,9 @@
             </div>
         </nav>
         <div class="hero">
-            <img src="images/new1.png" alt="">
+            <img src="images/new1.png" class="bear-2" alt="">
             <img src="images/cover_center.f553012a.png" alt="" class="hero-text">
-            <img src="images/new2.png" alt=""><br>
+            <img src="images/new2.png" alt="" class="bear-2"><br>
             <img src="images/mobile-min.436cf0b9.png" hidden class="mobile" alt="">
         </div>
     </div>
