--- a/CSS5/index.html
+++ b/CSS5/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yasir Portfolio</title>
+    <script src="https://kit.fontawesome.com/0151bb5b76.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
 </head>
 <body>
     <section class="navbar">
       <div class="nav-main">
-        <div class="logo"><img src="https://toppng.com/uploads/preview/mountain-png-transparent-free-images-clip-art-mountain-logo-11562903198rqfbyusjl7.png" width="50px" alt="">Portfolio</div>
+        <div class="logo"><img src="images/yasir-removebg-preview-removebg-preview.png" width="120px" height="60px" alt=""></div>
         <div class="nav-icon">
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <i class="bi bi-twitter"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-instagram"></i>
-          <i class="bi bi-whatsapp"></i>
+          <a href="https://www.facebook.com/yasirkhan.yasir.35" target="_blank"><i class="bi bi-facebook"></i></a>
+          <a href="https://twitter.com/Yasir_lala7" target="_blank"><i class="bi bi-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/muhammad-yasir-hussain/" target="_blank"><i class="bi bi-linkedin"></i></a>
+          <a href=""><i class="bi bi-whatsapp"></i></a>
         </div>
         <div>
           <i class="bi bi-list"></i>
@@ -28,7 +27,39 @@
     </section>
     <section class="hero">
       <div class="hero-main">
-
+        <div class="hero-text">
+          <h2>Hello, i'm</h2>
+          <h1 class="name-color">Muhammad Yasir</h1>
+          <h1>FrontEnd Developer</h1>
+          <p>sdlfjsdfjsdjflksdjfkldsjf</p>
+          <button>Hire me <i class="fa-solid fa-greater-than fa-sm"></i></button>
+          <a href="">Download Resume <i class="fa-solid fa-greater-than fa-sm"></i></a>
+        </div>
+        <div>
+          <img src="images/yasir.png" alt="">
+        </div>
+        <div class="main-3">
+          <div class="main-3-exp">
+            <h2>1+</h2>
+            <p>Years of Experience</p>
+            <hr>
+            <h2>5+</h2>
+            <p>Project Complete</p>
+            <hr>
+            <h2>99%</h2>
+            <p>Client Satisfaction</p>
+          </div>
+          <div>
+            <ul>
+              <li><i class="fa-solid fa-house fa-xl"></i></li>
+              <li><i class="fa-solid fa-user fa-xl"></i></li>
+              <li><i class="fa-solid fa-gear fa-xl"></i></li>
+              <li><i class="fa-brands fa-dropbox fa-xl"></i></li>
+              <li><i class="fa-solid fa-fire fa-xl"></i></li>
+              <li><i class="fa-solid fa-comment fa-xl"></i></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 </body>
