--- a/JS Calculator/index.html
+++ b/JS Calculator/index.html
@@ -10,7 +10,7 @@
     <section >
         <div class="cal-main">
             <div>
-                <input type="number" value="num" class="input-sec">
+                <input type="number" value="" class="input-sec" id="input2">
             </div>
             <div>
                 <ul class="cal-item sec-1">
@@ -20,21 +20,21 @@
                     <li class="org-color">/</li>
                 </ul>
                 <ul class="cal-item">
-                    <li>7</li>
-                    <li>8</li>
-                    <li>9</li>
+                    <li id="num-val" value="7" onclick="abc()">7</li>
+                    <li id="num-val2" value="8" onclick="abc()">8</li>
+                    <li id="num-val3" value="9" onclick="abc()">9</li>
                     <li class="org-color">x</li>
                 </ul>
                 <ul class="cal-item">
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
+                    <li id="num-val4" value="4" onclick="abc()">4</li>
+                    <li id="num-val5" value="5" onclick="abc()">5</li>
+                    <li id="num-val6" value="6" onclick="abc()">6</li>
                     <li class="org-color">-</li>
                 </ul>
                 <ul class="cal-item">
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
+                    <li id="num-val7" value="1" onclick="abc()">1</li>
+                    <li id="num-val8" value="2" onclick="abc()">2</li>
+                    <li id="num-val9" value="3" onclick="abc()">3</li>
                     <li class="org-color">+</li>
                 </ul>
                 <ul class="cal-item">
@@ -45,5 +45,6 @@
             </div>
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
