completed JS Calculator Assignment

--- a/JS Calculator/index.html
+++ b/JS Calculator/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="centre">JS Calculator</h1>
     <section >
         <div class="cal-main">
             <div>
@@ -45,6 +46,11 @@
             </div>
         </div>
     </section>
+    <footer>
+
+        <hr>
+        <h3 class="centre">Contact me: optimisticyasir@outlook.com</h3>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
