--- a/JS-08(GameClone)/index.html
+++ b/JS-08(GameClone)/index.html
@@ -10,6 +10,7 @@
     <div class="main">
         <div class="character">
             <img id="character1" src="images/iori-newerkofstance.gif" alt="">
+            <img id="character2" src="images/orochi-stand.gif" alt="orochi-stand">
         </div>
     </div>
     <script src="index.js"></script>
