--- a/CSS5/index.html
+++ b/CSS5/index.html
@@ -62,15 +62,15 @@
           <h1 class="name-color">Muhammad Yasir</h1>
           <h1>FrontEnd Developer</h1>
           <p>sdlfjsdfjsdjflksdjfkldsjf</p>
+          <div>
           <button>
-            Hire me <i class="fa-solid fa-greater-than fa-sm"></i>
+            Hire me <i class="fa-solid fa-greater-than fa-xs"></i>
           </button>
-          <a href=""
-            >Download Resume <i class="fa-solid fa-greater-than fa-sm"></i
-          ></a>
+          <a href="javascript:void(0)" class="white">Download Resume <i class="fa-solid fa-greater-than fa-xs"></i></a>
         </div>
+      </div>
         <div>
-          <img src="images/yasir.png" alt="" />
+          <!-- <img src="images/yasir.png" alt="" /> -->
         </div>
         <div class="main-3">
           <div class="main-3-exp">
