--- a/JS-09/index.html
+++ b/JS-09/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -46,7 +48,7 @@
         </div>
         <div class="textarea-inp" id="text-sec">
         </div>
-        <button>Return</button>
+        <button onclick="returnBtn()" id="retrn">Delete this Post</button>
     </div>
     <script src="index.js"></script>
 </body>
