--- a/JS-09/index.html
+++ b/JS-09/index.html
@@ -25,13 +25,13 @@
         <div class="textarea-inp">
             <textarea name="" id="text" cols="30" rows="10"></textarea>
             <div class="imgs">
-                <span><img onclick="img2(this)" src="images/bg-1.jfif" alt=""></span>
-                <span><img onclick="img2(this)" src="images/bg-2.jfif" alt=""></span>
-                <span><img onclick="img2(this)" src="images/bg-3.webp" alt=""></span>
-                <span><img onclick="img2(this)" src="images/bg-4.webp" alt="" ></span>
-                <span><img onclick="img2(this)" src="images/bg-5.jpeg" alt="" ></span>
-                <span><img onclick="img2(this)" src="images/bg-6.webp" alt=""></span>
-                <span><img onclick="img2(this)" src="images/bg-7.jpeg" alt=""></span>
+                <span><img onclick="img2('images/bg-1.jfif')" src="images/bg-1.jfif" id="free" alt=""></span>
+                <span><img onclick="img2('images/bg-2.jfif')" src="images/bg-2.jfif" alt=""></span>
+                <span><img onclick="img2('images/bg-3.webp')" src="images/bg-3.webp" alt=""></span>
+                <span><img onclick="img2('images/bg-4.webp')" src="images/bg-4.webp" alt="" ></span>
+                <span><img onclick="img2('images/bg-5.jpeg')" src="images/bg-5.jpeg" alt="" ></span>
+                <span><img onclick="img2('images/bg-6.webp')" src="images/bg-6.webp" alt=""></span>
+                <span><img onclick="img2('images/bg-7.jpeg')" src="images/bg-7.jpeg" alt=""></span>
 
             </div>
         </div>
