--- a/JS-09/index.html
+++ b/JS-09/index.html
@@ -34,21 +34,15 @@
                 <span><img onclick="img2('images/bg-7.jpeg')" src="images/bg-7.jpeg" alt=""></span>
 
             </div>
+            <div class="text-color-div">
+                <div>Text Color </div>
+                <div><input type="color" name="" id="text-col" onchange="textCol()"></div>
+            </div>
         </div>
         <button onclick="post()">Post</button>
     </div>
-    <div class="main main2" id="main2">
-        <h1>Your post</h1> <hr>
-        <div class="main-profile">
-            <img src="images/yasir-removebg-preview.png" width="50px" class="profile-pic">
-            <span>
-                <p>Muhammad Yasir</p>
-                <p id="shared-with"></p>
-            </span>
-        </div>
-        <div class="textarea-inp" id="text-sec">
-        </div>
-        <button onclick="returnBtn()" id="retrn">Delete this Post</button>
+    <div id="main3">
+        
     </div>
     <script src="index.js"></script>
 </body>
