--- a/JS-09/index.html
+++ b/JS-09/index.html
@@ -35,7 +35,7 @@
 
             </div>
             <div class="text-color-div">
-                <div>Text Color </div>
+                <div>Change Text Color from here: </div>
                 <div><input type="color" name="" id="text-col" onchange="textCol()"></div>
             </div>
         </div>
