--- a/JS-10(object)/index.html
+++ b/JS-10(object)/index.html
@@ -16,11 +16,12 @@
             <select class="form-select" aria-label="Default select example" id="company" onchange="mobItem()"></select>
             <select class="form-select" aria-label="Default select example" id="model"></select>
             
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success" type="submit" onclick="searchResult()">Search</button>
           </form>
         </div>
       </nav>
-
+      <div id="allMobiles" class="row">
+      </div>
     <script src="index.js"></script>
 </body>
 </html>
