--- a/JS-10(object)/index.html
+++ b/JS-10(object)/index.html
@@ -12,11 +12,10 @@
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand">Mobile Phone Specs</a>
-          <form class="d-flex">
             <select class="form-select" aria-label="Default select example" id="company" onchange="mobItem()"></select>
             <select class="form-select" aria-label="Default select example" id="model"></select>
             
-            <button class="btn btn-outline-success" type="submit" onclick="searchResult()">Search</button>
+            <button class="btn btn-outline-success" type="" onclick="searchResult()">Search</button>
           </form>
         </div>
       </nav>
