--- a/JS-10(object)/index.html
+++ b/JS-10(object)/index.html
@@ -15,7 +15,7 @@
             <select class="form-select" aria-label="Default select example" id="company" onchange="mobItem()"></select>
             <select class="form-select" aria-label="Default select example" id="model"></select>
             
-            <button class="btn btn-outline-success" type="" onclick="searchResult()">Search</button>
+            <button class="btn btn-primary" type="" onclick="searchResult()">Search</button>
           </form>
         </div>
       </nav>
