--- a/JS-10(object)/index.html
+++ b/JS-10(object)/index.html
@@ -11,12 +11,13 @@
 <body>
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand">Mobile Phone Specs</a>
-            <select class="form-select" aria-label="Default select example" id="company" onchange="mobItem()"></select>
+          <a class="navbar-brand"><img class="img" src="https://img.freepik.com/free-vector/flat-design-mobile-store-logo-template_23-2149728788.jpg" alt=""></a>
+          <div class="nav-item">
+          <select class="form-select" aria-label="Default select example" id="company" onchange="mobItem()"></select>
             <select class="form-select" aria-label="Default select example" id="model"></select>
             
             <button class="btn btn-primary" type="" onclick="searchResult()">Search</button>
-          </form>
+          </div>
         </div>
       </nav>
       <div id="allMobiles" class="row">
