--- a/JS-QuizApp/index.html
+++ b/JS-QuizApp/index.html
@@ -6,28 +6,47 @@
     <title>SMIT Quiz App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
-    <div class="main">
+    <div class="main" id="main2">
         <div class="login">
             <div>
                 <h1>Login</h1>
             </div>
             <div>
                 <p>Username</span></p>
-                <span><i class="bi bi-person"></i></span><input type="text" placeholder="Type your Username"><hr>
+                <span class="icons"><i class="bi bi-person"></i></span><input required type="text" id="userInput" placeholder="Type your Username"><hr>
                 <p>Password</p>
-                <span><i class="bi bi-file-lock2"></i></span><input type="password" placeholder="Type your password"><hr>
-                <span class="forgot">Forgot Password?</span><br>
-                <button>LOGIN</button>
+                <span class="icons"><i class="bi bi-file-lock2"></i></span><input required type="password" value="" id="userPass" placeholder="Type your password"><hr class="hrNew"/>
+                <p class="forgot"><a href="javascript:void(0)" onclick="showPass()">Forgot Password? </a></p><br>
+                <button id="login-btn" class="login-button" onclick="loginPage()">LOGIN</button>
             </div>
-            <div>
-                <p>Or Sign Up Using</p>
+            <div class="links-div">
+                <p class="links-text">Or Sign Up Using</p>
+                <div class="icon-item">
+                    <i class="bi bi-facebook" style="background-color: #3b5998;"></i>
+                    <i class="bi bi-twitter" style="background-color: #1da1f2;"></i>
+                    <i class="bi bi-google" style="background-color: #ea4335;"></i>
+                </div>
 
             </div>
         </div>
     </div>
+
+    <!-- Login Page HTML ENDS HERE -->
+
+    <div id="testPage" class="second-div">
+       
+    </div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 <script src="app.js"></script>
