--- a/JS-QuizApp/index.html
+++ b/JS-QuizApp/index.html
@@ -18,9 +18,9 @@
             </div>
             <div>
                 <p>Username</span></p>
-                <span class="icons"><i class="bi bi-person"></i></span><input required type="text" id="userInput" placeholder="Type your Username"><hr>
+                <span class="icons"><i class="bi bi-person"></i></span><input required type="text" class="input" id="userInput" placeholder="Type your Username"><hr>
                 <p>Password</p>
-                <span class="icons"><i class="bi bi-file-lock2"></i></span><input required type="password" value="" id="userPass" placeholder="Type your password"><hr class="hrNew"/>
+                <span class="icons"><i class="bi bi-file-lock2"></i></span><input required type="password" class="input" value="" id="userPass" placeholder="Type your password"><hr class="hrNew"/>
                 <p class="forgot"><a href="javascript:void(0)" onclick="showPass()">Forgot Password? </a></p><br>
                 <button id="login-btn" class="login-button" onclick="loginPage()">LOGIN</button>
             </div>
@@ -37,11 +37,16 @@
     </div>
 
     <!-- Login Page HTML ENDS HERE -->
-
-    <div id="testPage" class="second-div">
-       
+    <div class="first-div" id="firstDiv">
+        <h1>CSS Quiz</h1>
+        <p>Following quiz provides Multiple Choice Questions (MCQs) related to CSS. You will have to read all the given answers and click over the correct answer.</p>
+        <h4>Time 30minutes</h4>
+        <button onclick="testStart()">Start Quiz</button>
     </div>
 
+    <div id="testPage" class="second-div">
+    </div>
+    <div class="next-div" id="nextDiv" class="animate__animated animate__pulse"><button onclick="renderPage()" class="next">Next</button></div>
 
 
 
@@ -49,6 +54,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-<script src="app.js"></script>
+    <script src="app.js"></script>
+
 </body>
 </html>
