--- a/JS-12/signup.html
+++ b/JS-12/signup.html
@@ -15,7 +15,7 @@
         <div class="login">
             <div>
                 <h1>Sign Up</h1>
-                <p class="goto-login">Already a member? <a href="signin.html">Log In</a></p>
+                <p class="goto-login">Already a member? <a href="index.html">Log In</a></p>
             </div>
             <form onsubmit="saveDetail()">
                 <div class="form-row d-flex justify-content-center">
